# fastapi-project

./: .coverage  README.md  database.db  pyproject.toml  requirements.txt
faiss_test/: index.npy  load_my_faiss.py  my_faiss.py
fastapi_project/: app.py  database.py  models.py  schemas.py  security.py
fastapi_project/routers/: auth.py  collection.py  documents.py  guess.py  users.py
fastapi_project/vectors/: call_llama.py  embedding.py  test_session.py
migrations/: env.py
migrations/versions/: 29b523c46da4_new_migration.py
tests/: conftest.py  test_auth.py  test_collections.py  test_db.py  test_documents.py  test_security.py  test_users.py
